--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -14,7 +14,7 @@
 <!-- css -->
 <!-- <link rel="stylesheet" href="{{url_for('static',filename='styles.css')}}"> -->
     {% if title %}
-    <title>Blog {{ title }}</title>
+    <title>Blog - {{ title }}</title>
     {% else %}
     <title>Blog</title>
     {% endif %}
