--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -40,13 +40,20 @@
       </div>
       <div class="col-md-4">
         <div class="content-section">
-          <h3>Our Sidebar</h3>
-          <p class='text-muted'>You can put any information here you'd like.
+          <h3>Coffee break</h3>
+          <p>Whether you’re an aspiring blogger or just looking for a little inspiration in your life,
+             here’s a list of 10 best blogs with inspirational bloggers who all started out as, well… bloggers. Enjoy!
             <ul class="list-group">
-              <li class="list-group-item list-group-item-light">Latest Posts</li>
-              <li class="list-group-item list-group-item-light">Announcements</li>
-              <li class="list-group-item list-group-item-light">Calendars</li>
-              <li class="list-group-item list-group-item-light">etc</li>
+              <li class="list-group-item list-group-item-light">Gary Vaynerchuk @GaryVaynerchuk.com</li>
+              <li class="list-group-item list-group-item-light">Rand Fishkin @SEOmoz.org</li>
+              <li class="list-group-item list-group-item-light">Pat Flynn @SmartPassiveIncome.com</li>
+              <li class="list-group-item list-group-item-light">Brian Clark @Copyblogger.com</li>
+              <li class="list-group-item list-group-item-light">Andrew Sullivan @thedishdaily.com</li>
+              <li class="list-group-item list-group-item-light">Harvey Levin @TMZ.com</li>
+              <li class="list-group-item list-group-item-light">Michael Arrington @TechCrunch.com</li>
+              <li class="list-group-item list-group-item-light">Tim Ferriss @Fourhourworkweek.com/blog</li>
+              <li class="list-group-item list-group-item-light">Timothy Sykes @TimothySykes.com</li>              
+              <li class="list-group-item list-group-item-light">Darren Rowse @Problogger.net</li>
             </ul>
           </p>
         </div>
