--- a/blog/templates/home.html
+++ b/blog/templates/home.html
@@ -2,7 +2,7 @@
 {% block content %}
     {% for post in posts %}
     <article class="media content-section">
-      <img class="rounded-circle article-img" src="{{ url_for('static', filename='images/' + post.author.image_file) }}">
+      <img class="square article-img" style="height: 100px; width: 200px;" src="{{ url_for('static', filename='images/' + post.author.image_file) }}">
         <div class="media-body">
           <div class="article-metadata">
             <a class="mr-2" href="#">{{ post.author.username }}</a>
