--- a/blog/templates/post.html
+++ b/blog/templates/post.html
@@ -1,36 +1,51 @@
 {% extends "base.html" %}
 {% block content %}
-  <article class="media content-section">
-    <img class="rounded-circle article-img" src="{{ url_for('static', filename='images/' + post.author.image_file) }}">
-    <div class="media-body">
-      <div class="article-metadata">
-        <a class="mr-2" href="#">{{ post.author.username }}</a>
-        <small class="text-muted">{{ post.date_posted.strftime('%Y-%m-%d') }}</small>
-        {% if post.author == current_user %}
-          <div>
-            <a class="btn btn-secondary btn-sm mt-1 mb-1" href="{{ url_for('update_post', post_id=post.id) }}">Update</a>
-            <button type="button" class="btn btn-danger btn-sm m-1" data-toggle="modal" data-target="#deleteModal">Delete</button>
-          </div>
-        {% endif %}
-      </div>
-      <h2 class="article-title">{{ post.title }}</h2>
-      <p class="article-content">{{ post.content }}</p>
+<div class="container">
+    <div class="row">
+        <div class="col-md-10 offset-md-1">
+            <div class="row">
+                <div class="col-md-10 main-left" >
+                    <article class="media content-section">
+                        <img class="square my-4  account-img animated rollIn" style="width: 70px; height: 80px;" src=" {{url_for('static', filename='images/' + post.author.image_file)}} " alt="">
+                        <div class="media-body">
+                            <div class="article-metadata">
+                                <a class="mr-2 ml-4 animated slideInRight" href="#">{{ post.author.username }}</a>
+                                <small class="text-muted">{{ post.date_posted.strftime('%Y-%m-%d') }}</small>
+                                {% if post.author == current_user %}
+                                <div>
+                                    <a class="btn btn-secondary btn-sm mt-1 mb-1" href="{{ url_for('update_post', post_id = post.id) }}">Update</a>
+                                    <button type="button" class="btn btn-danger btn-sm m-1" data-toggle="modal" data-target="#deleteModal">Delete</button>
+                                </div>
+                                {% endif %}
+                            </div>
+                        </div>
+                        <div class="col-md-10 main-right">                    
+                            <h2 class="article-title">{{ post.title }}</a></h2>
+                            <p class="article-content">{{ post.content }}</p>
+                        </div>
+                    </article> 
+                </div>
+            </div>
+        </div>
     </div>
-  </article>
-  <!-- Modal -->
-  <div class="modal fade" id="deleteModal" tabindex="-1" role="dialog" aria-labelledby="deleteModalLabel" aria-hidden="true">
+</div>
+<!-- Modal -->
+<div class="modal fade" id="deleteModal" tabindex="-1" role="dialog" aria-labelledby="deleteModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="deleteModalLabel">Delete Post?</h5>
+          <h5 class="modal-title" id="deleteModalLabel">Delete Post</h5>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
+            <!-- <span aria-hidden="true">&times;</span> -->
           </button>
         </div>
+        <div class="modal-body">
+        <h2 class="animated bounce infinite">Are you sure you want to delete?</h2>
+        </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-          <form action="{{ url_for('delete_post', post_id=post.id) }}" method="POST">
-            <input class="btn btn-danger" type="submit" value="Delete">
+          <button type="button" class="btn btn-secondary animated fadeInRight" data-dismiss="modal">Close</button>
+          <form action=" {{ url_for('delete_post', post_id=post.id) }} " method="POST">
+              <input class="btn btn-danger animated fadeInLeft" type="submit" value="Delete">
           </form>
         </div>
       </div>
