--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -40,7 +40,7 @@
       </div>
       <div class="col-md-4">
         <div class="content-section">
-          <h3>Coffee break</h3>
+          <h3>Coffee break ☕...</h3>
           <p>Whether you’re an aspiring blogger or just looking for a little inspiration in your life,
              here’s a list of 10 best blogs with inspirational bloggers who all started out as, well… bloggers. Enjoy!
             <ul class="list-group">
