--- a/blog/templates/about.html
+++ b/blog/templates/about.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
-    <h1>Let's spill some tea....</h1>
+    <h1>My inker run dry 😜 ✍🏾....</h1>
     <p>“Blogging is to writing what extreme sports are to athletics: more free-form, more accident-prone, less formal, more alive. It is, in many ways, writing out loud.”
 
         For most of human history, all published writing had been carefully inspected, edited, and approved.
@@ -8,5 +8,5 @@
         In the last decade, blogging has turned the publishing world on its head. A blog allows you to write and publish anything, from anywhere, and have it be immediately available to billions of people all around the world.
         
         This means that blogging is uniquely “alive”, as Andrew Sullivan points out in The Atlantic. I, for one, am happy to embrace the chaos and vitality.</p>
-    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcQf_5gijcwYYBeWJHnhzXAtkItGXLZgzeq_Kw&usqp=CAU" alt="" style="width: 90%; height: 70%;">
+    <img src="https://encrypted-tbn0.gstatic.com/?q=tbn%3AANd9GcQf_5gijcwYYBeWJHnhzXAtkItGXLZgzeq_Kw&usqp=CAU" alt="" style="width: 90%; height: 70%;">
 {% endblock content %}
